@@ -2370,6 +2370,7 @@ class console_handler : public map_command_handler<console_handler>, private cha
 		void do_next_level();
 		void do_choose_level();
 		void do_turn();
+		void do_turn_limit();
 		void do_debug();
 		void do_nodebug();
 		void do_lua();
@@ -2458,6 +2459,8 @@ class console_handler : public map_command_handler<console_handler>, private cha
 			register_alias("choose_level", "cl");
 			register_command("turn", &console_handler::do_turn,
 				_("Change turn number (and time of day)"), _("[turn]"), "D");
+			register_command("turn_limit", &console_handler::do_turn_limit,
+				_("Change turn limit"), _("[limit]"), "D");
 			register_command("debug", &console_handler::do_debug,
 				_("Turn debug mode on."));
 			register_command("nodebug", &console_handler::do_nodebug,
@@ -3183,6 +3186,16 @@ void console_handler::do_turn()
 		resources::tod_manager->next_turn();
 	}
 	menu_handler_.gui_->new_turn();
+	menu_handler_.gui_->redraw_everything();
+}
+
+void console_handler::do_turn_limit()
+{
+	tod_manager& tod_man = *resources::tod_manager;
+	int limit =
+		get_data().empty() ? -1 : lexical_cast_default<int>(get_data(), 1);
+	tod_man.add_turns(-tod_man.number_of_turns());
+	tod_man.add_turns(lexical_cast_default<int>(limit,-1));
 	menu_handler_.gui_->redraw_everything();
 }
 
