@@ -201,6 +201,7 @@ Version 1.9.0-svn:
    * Fix rare layer's order bug about unit drawn above big south-west unit
    * Improvements to make Wesnoth compile better with g++-4.5 in C++-0x mode
    * Added ":undiscover" to clear all your discovered units from help
+   * Added ":turn_limit" to change the turn limit for a scenario in debug mode
    * Fix a crash when a sighted event killed a unit just before a fight
    * Fixed bug #16171: Disable commands during [animate_unit]
 
